--- a/courseco/templates/layout.html
+++ b/courseco/templates/layout.html
@@ -31,7 +31,8 @@
 			    <!-- Navbar Right Side -->
 			    <div class="navbar-nav">
 					<!-- if the user is logged in -->
-			    	{% if current_user.is_authenticated %}
+					{% if current_user.is_authenticated %}
+					<a class="nav-item nav-link" href="{{ url_for('show_list', user_id=current_user.id) }}">List</a>
 			    	<a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
 			    	<a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
 			    	{% else %}
