--- a/courseco/templates/firstHome.html
+++ b/courseco/templates/firstHome.html
@@ -17,29 +17,29 @@
 
 <body>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
-     <div class="container">
-      <a href="#home" class="navbar-brand">
-        <img src="img/pirates.png" width="50" height="50" alt="">
-        <h3 class="d-inline  align-middle">CoCourses</h3>
-      </a>
-      <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a href="#home" class="nav-link lead"><strong>Home</strong></a>
-          </li>
+    <div class="container">
+     <a href="#home" class="navbar-brand">
+       <img src="img/pirates.png" width="50" height="50" alt="">
+       <h3 class="d-inline  align-middle">CoCourses</h3>
+     </a>
+     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+       <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarCollapse">
+       <ul class="navbar-nav ml-auto">
+         <li class="nav-item">
+           <a href="home.html" class="nav-link lead"><strong>Home</strong></a>
+         </li>
 
-          <li class="nav-item">
-            <a href="contact.html" class="nav-link lead btn-outline-secondary"><strong>Contact us</strong> </a>
-          </li>
-          
-        </ul>
+         <li class="nav-item">
+           <a href="contact.html" class="nav-link lead"><strong>contact us</strong> </a>
+         </li>
 
-      </div>
-    </div>
-  </nav>
+       </ul>
+     </div>
+   </div>
+ </nav>
+
 
 
   <!-- ACTIONS -->
