--- a/courseco/templates/home.html
+++ b/courseco/templates/home.html
@@ -244,7 +244,7 @@
 
         </div>
         <div class="modal-footer">
-          <button class="btn btn-success" data-dismiss="modal">Close</button>
+          <button class="btn btn-primary" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
