--- a/courseco/templates/home.html
+++ b/courseco/templates/home.html
@@ -29,11 +29,7 @@
 	</div>
 {% endblock %}
 
-
-
 -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -244,7 +240,7 @@
 
         </div>
         <div class="modal-footer">
-          <button class="btn btn-primary" data-dismiss="modal">Close</button>
+          <button class="btn btn-success" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
@@ -267,6 +263,11 @@
   </footer>
 
 </body>
+
 </html>
+
+
+
+
 
 
