--- a/courseco/templates/View_Course.html
+++ b/courseco/templates/View_Course.html
@@ -50,7 +50,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <a href="index.html" class="btn btn-light btn-block">
+          <a href="home.html" class="btn btn-light btn-block">
             <i class="fas fa-arrow-left"></i>
             Back To Home
           </a>
